--- a/index.html
+++ b/index.html
@@ -9,19 +9,21 @@
   <body>
     <div class="page">
       <header class="header">
-        <ul class="navigation">
-          <li class="navigation_item">About</li>
-          <li class="navigation_item">Products</li>
-          <li class="navigation_item">Contacts</li>
-        </ul>
+        <nav>
+          <ul class="navigation">
+            <li class="navigation_item">About</li>
+            <li class="navigation_item">Products</li>
+            <li class="navigation_item">Contacts</li>
+          </ul>
+        </nav>
       </header>
       <main class="content">
         <section class="dashboard">
           <h2>I can use Flexbox!!!</h2>
         </section>
         <aside class="news">
-          <h2>News</h2>
-          <ul class="news-list">
+          <h2 class="caption">News</h2>
+          <ul class="news_list">
             <li class="news_item">News1</li>
             <li class="news_item">News2</li>
             <li class="news_item">News3</li>
